oils dall-e 2 & 3 setup

--- a/art/oil-painting.ipynb
+++ b/art/oil-painting.ipynb
@@ -5,7 +5,9 @@
    "id": "ebea2593-8c0e-4d40-9cec-8e5da3759761",
    "metadata": {},
    "source": [
-    "# Oil Painting"
+    "# Oil Painting Reference\n",
+    "\n",
+    "Test - WIP"
    ]
   },
   {
@@ -32,41 +34,165 @@
     "dotenv_path = find_dotenv('../.env')\n",
     "load_dotenv(dotenv_path)\n",
     "\n",
-    "# Now, you can safely load your API key from environment variables\n",
+    "# Load the API key from environment variables\n",
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "if not api_key:\n",
     "    raise ValueError(\"API key not found. Please set the OPENAI_API_KEY environment variable.\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aef6c92c-be3e-47ae-831b-3af728c06c09",
+   "metadata": {},
+   "source": [
+    "## Parameter Values Guidelines\n",
+    "\n",
+    "\n",
+    "**model** (‘dall-e-2’ or ‘dall-e-3’): This is the model you’re generating with. Be careful to set it to ‘dall-e-3’ as it defaults to ‘dall-e-2’ if empty.\n",
+    "\n",
+    "**style** (‘natural’ or ‘vivid’): The style of the generated images. Must be one of vivid or natural. Vivid causes the model to lean towards generating hyper-real and dramatic images. Natural causes the model to produce more natural, less hyper-real looking images. Defaults to ‘vivid’.\n",
+    "\n",
+    "**quality** (‘standard’ or ‘hd’): The quality of the image that will be generated. ‘hd’ creates images with finer details and greater consistency across the image. Defaults to ‘standard’.\n",
+    "\n",
+    "**prompt** (str): A text description of the desired image(s). The maximum length is 1000 characters. Required field.\n",
+    "\n",
+    "**n** (int): The number of images to generate. Must be between 1 and 10. Defaults to 1. For dall-e-3, only n=1 is supported.\n",
+    "\n",
+    "**size** (...): The size of the generated images. Must be one of 256x256, 512x512, or 1024x1024 for DALL·E-2 models. Must be one of 1024x1024, 1792x1024, or 1024x1792 for DALL·E-3 models.\n",
+    "\n",
+    "**response_format** ('url' or 'b64_json'): The format in which the generated images are returned. Must be one of \"url\" or \"b64_json\". Defaults to \"url\".\n",
+    "\n",
+    "**user** (str): A unique identifier representing your end-user, which will help OpenAI to monitor and detect abuse.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76225514-3271-42ed-9ef8-0567381c5b75",
+   "metadata": {},
+   "source": [
+    "## Smaller Model for Testing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8d104d90-bc22-4864-9883-ff151abb6ffc",
+   "execution_count": 20,
+   "id": "990e0b15-c5ac-49fa-8951-d95d43a4762f",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://oaidalleapiprodscus.blob.core.windows.net/private/org-6KzPuGczg08XHZB1gpF3q6OM/user-4nIOckwoHivCoksDGVzLRdWN/img-rJ9PTRxnpIF0QbyOTg028mP3.png?st=2024-08-18T02%3A32%3A21Z&se=2024-08-18T04%3A32%3A21Z&sp=r&sv=2024-08-04&sr=b&rscd=inline&rsct=image/png&skoid=d505667d-d6c1-4a0a-bac7-5c84a87759f8&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-08-17T11%3A36%3A34Z&ske=2024-08-18T11%3A36%3A34Z&sks=b&skv=2024-08-04&sig=vnXe3RQe9d558Avi5mgFgBvTApl1rnp29Js54SpC4XE%3D\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ImagesResponse(created=1723945464, data=[Image(b64_json=None, revised_prompt='Create a pixel art image of an astronaut. This astronaut has a Caucasian descent and is a male. The astronaut is relaxing at a tropical resort that absurdly exists in space. Include palm trees swaying in the zero-gravity environment, the spacesuit leisurely reclining on a beach chair, with a tropical drink in his hand. Also, illustrate the distant planets, nebulas, and twinkling stars in the open space background while maintaining the tropical ambiance.', url='https://oaidalleapiprodscus.blob.core.windows.net/private/org-6KzPuGczg08XHZB1gpF3q6OM/user-4nIOckwoHivCoksDGVzLRdWN/img-TZlvQP8lubXAV48OphTh1WAy.png?st=2024-08-18T00%3A44%3A24Z&se=2024-08-18T02%3A44%3A24Z&sp=r&sv=2024-08-04&sr=b&rscd=inline&rsct=image/png&skoid=d505667d-d6c1-4a0a-bac7-5c84a87759f8&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-08-17T05%3A14%3A01Z&ske=2024-08-18T05%3A14%3A01Z&sks=b&skv=2024-08-04&sig=st1T2AjOmaXBb6Ldj3YIA8b/GrCSaqMuHSDhCjOZV04%3D')])\n"
+      "['__abstractmethods__', '__annotations__', '__class__', '__class_getitem__', '__class_vars__', '__copy__', '__deepcopy__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__fields__', '__fields_set__', '__format__', '__ge__', '__get_pydantic_core_schema__', '__get_pydantic_json_schema__', '__getattr__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__pretty__', '__private_attributes__', '__pydantic_complete__', '__pydantic_core_schema__', '__pydantic_custom_init__', '__pydantic_decorators__', '__pydantic_extra__', '__pydantic_fields_set__', '__pydantic_generic_metadata__', '__pydantic_init_subclass__', '__pydantic_parent_namespace__', '__pydantic_post_init__', '__pydantic_private__', '__pydantic_root_model__', '__pydantic_serializer__', '__pydantic_validator__', '__reduce__', '__reduce_ex__', '__repr__', '__repr_args__', '__repr_name__', '__repr_str__', '__rich_repr__', '__setattr__', '__setstate__', '__sizeof__', '__slots__', '__str__', '__subclasshook__', '__weakref__', '_abc_impl', '_calculate_keys', '_check_frozen', '_copy_and_set_values', '_get_value', '_iter', 'construct', 'copy', 'created', 'data', 'dict', 'from_orm', 'json', 'model_computed_fields', 'model_config', 'model_construct', 'model_copy', 'model_dump', 'model_dump_json', 'model_extra', 'model_fields', 'model_fields_set', 'model_json_schema', 'model_parametrized_name', 'model_post_init', 'model_rebuild', 'model_validate', 'model_validate_json', 'model_validate_strings', 'parse_file', 'parse_obj', 'parse_raw', 'schema', 'schema_json', 'to_dict', 'to_json', 'update_forward_refs', 'validate']\n",
+      "ImagesResponse(created=1723951941, data=[Image(b64_json=None, revised_prompt=None, url='https://oaidalleapiprodscus.blob.core.windows.net/private/org-6KzPuGczg08XHZB1gpF3q6OM/user-4nIOckwoHivCoksDGVzLRdWN/img-rJ9PTRxnpIF0QbyOTg028mP3.png?st=2024-08-18T02%3A32%3A21Z&se=2024-08-18T04%3A32%3A21Z&sp=r&sv=2024-08-04&sr=b&rscd=inline&rsct=image/png&skoid=d505667d-d6c1-4a0a-bac7-5c84a87759f8&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-08-17T11%3A36%3A34Z&ske=2024-08-18T11%3A36%3A34Z&sks=b&skv=2024-08-04&sig=vnXe3RQe9d558Avi5mgFgBvTApl1rnp29Js54SpC4XE%3D')])\n"
      ]
     }
    ],
    "source": [
-    "# gets OPENAI_API_KEY from your environment variables\n",
+    "# Gets OPENAI_API_KEY from your environment variables\n",
     "openai = OpenAI()\n",
     "\n",
-    "prompt = \"An astronaut lounging in a tropical resort in space, pixel art\"\n",
-    "model = \"dall-e-3\"\n",
+    "prompt = \"A sunlit British Columbian forest with a small brook, realistic oil painting\"\n",
+    "\n",
+    "\n",
+    "def main() -> None:\n",
+    "    # Generate an image based on the prompt with specified parameters\n",
+    "    response = openai.images.generate(\n",
+    "        prompt=prompt,\n",
+    "        model='dall-e-2',\n",
+    "        style='vivid',\n",
+    "        size='512x512',\n",
+    "        quality='hd',\n",
+    "        n=1)\n",
+    "\n",
+    "    # Extract the image URL from the response and display directly in Jupyter\n",
+    "    try:\n",
+    "        image_url = response.data[0].url  \n",
+    "        display(Image(url=image_url))  \n",
+    "    except AttributeError as e:\n",
+    "        print(f\"Failed to extract image URL: {e}\")\n",
+    "\n",
+    "    # Print response containing a URL link to image\n",
+    "    print(dir(response))\n",
+    "    print(response)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ba63e26-b2dc-40b7-ba12-bb20bb927958",
+   "metadata": {},
+   "source": [
+    "## Full Model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8d104d90-bc22-4864-9883-ff151abb6ffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://oaidalleapiprodscus.blob.core.windows.net/private/org-6KzPuGczg08XHZB1gpF3q6OM/user-4nIOckwoHivCoksDGVzLRdWN/img-7fcaMWAYsKkKQehVICIlaRxC.png?st=2024-08-18T02%3A11%3A54Z&se=2024-08-18T04%3A11%3A54Z&sp=r&sv=2024-08-04&sr=b&rscd=inline&rsct=image/png&skoid=d505667d-d6c1-4a0a-bac7-5c84a87759f8&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-08-17T08%3A41%3A20Z&ske=2024-08-18T08%3A41%3A20Z&sks=b&skv=2024-08-04&sig=vLzrx/kYrEDiTz5ELqpNRJXPIGGz%2Bq2Tj66/9GbB2wk%3D\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ImagesResponse(created=1723950714, data=[Image(b64_json=None, revised_prompt='Imagine a beautifully tranquil forest scene, filled with the dazzling sunlight filtering through the towering, healthy pine trees. There is a small, burbling brook twirling its way through the trees, adding a soft melody to the quiet forest. The scene enthralls with a lifelike portrayal that conveys the feel of an oil painting. Paying tribute to the traditional landscape painters, suppose the location to be the stunningly diverse forests found within British Columbia. Evoke textures and hues associated with realism in oil painting techniques, enveloping viewers in the serenity of nature.', url='https://oaidalleapiprodscus.blob.core.windows.net/private/org-6KzPuGczg08XHZB1gpF3q6OM/user-4nIOckwoHivCoksDGVzLRdWN/img-7fcaMWAYsKkKQehVICIlaRxC.png?st=2024-08-18T02%3A11%3A54Z&se=2024-08-18T04%3A11%3A54Z&sp=r&sv=2024-08-04&sr=b&rscd=inline&rsct=image/png&skoid=d505667d-d6c1-4a0a-bac7-5c84a87759f8&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-08-17T08%3A41%3A20Z&ske=2024-08-18T08%3A41%3A20Z&sks=b&skv=2024-08-04&sig=vLzrx/kYrEDiTz5ELqpNRJXPIGGz%2Bq2Tj66/9GbB2wk%3D')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gets OPENAI_API_KEY from your environment variables\n",
+    "openai = OpenAI()\n",
+    "\n",
+    "prompt = \"A sunlit British Columbian forest with a small brook, realistic oil painting\"\n",
     "\n",
     "\n",
     "def main() -> None:\n",
     "    # Generate an image based on the prompt\n",
-    "    response = openai.images.generate(prompt=prompt, model=model)\n",
+    "    response = openai.images.generate(\n",
+    "        prompt=prompt,\n",
+    "        model='dall-e-3',\n",
+    "        style='vivid',\n",
+    "        size='1792x1024',\n",
+    "        quality='hd',\n",
+    "        n=1)\n",
     "\n",
-    "    # Prints response containing a URL link to image\n",
+    "    # Extract the image URL from the response and display directly in Jupyter Notebook\n",
+    "    try:\n",
+    "        image_url = response.data[0].url  \n",
+    "        display(Image(url=image_url))  \n",
+    "    except AttributeError as e:\n",
+    "        print(f\"Failed to extract image URL: {e}\")\n",
+    "\n",
+    "    # Print response containing a URL link to image\n",
+    "    print(dir(response))\n",
     "    print(response)\n",
-    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
@@ -74,40 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "95c64d08-76bb-44f2-8d9b-7216e4b2fc2e",
+   "execution_count": null,
+   "id": "0b7d61ac-96cc-413f-b58c-fc090a706dd6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred: 'ImagesResponse' object is not subscriptable\n"
-     ]
-    }
-   ],
-   "source": [
-    "def generate_and_display_image(prompt):\n",
-    "    try:\n",
-    "        # Create image using OpenAI's API\n",
-    "        response = openai.images.generate(\n",
-    "            model=\"dall-e-3\",  # Make sure to use the correct model identifier\n",
-    "            prompt=prompt,\n",
-    "            n=1,\n",
-    "            size=\"1024x1024\"\n",
-    "        )\n",
-    "        \n",
-    "        # Extract image URL from the response\n",
-    "        image_url = response['data'][0]['url']\n",
-    "        display(Image(url=image_url))  # Display the image directly in the notebook\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n",
-    "\n",
-    "# Example usage\n",
-    "prompt = \"A cozy cabin in the woods at twilight, with warm lights and falling snow\"\n",
-    "generate_and_display_image(prompt)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
